update container settings

--- a/_cloudenv-settings.json
+++ b/_cloudenv-settings.json
@@ -1,5 +1,6 @@
 {
     "isInternal": true,
+    "containerName": "cloudenv-dev",
     "experimentalFeatures": {
         "authenticationRefactor": true
     }
